Fixed fieldset flex direction on firefox and safari

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ header, footer {
 /* Form Styles */
 fieldset {
   display: flex;
+  flex-direction: column;
 }
 
 input {
